copie 0 avant migration

--- a/templates/client/new.html.twig
+++ b/templates/client/new.html.twig
@@ -18,6 +18,10 @@
     {{ form_widget(form.siret, {'attr': {'class': 'form-control col-md-4'}}) }}
     {{ form_errors(form.siret) }}
 
+     {{ form_label(form.referencebancaire) }}
+    {{ form_widget(form.referencebancaire, {'attr': {'class': 'form-control col-md-4'}}) }}
+    {{ form_errors(form.referencebancaire) }}
+
     {{ form_label(form.numtel) }}
     {{ form_widget(form.numtel, {'attr': {'class': 'form-control col-md-4'}}) }}
     {{ form_errors(form.numtel) }}
